syntax = "proto3";

package proto;

message Genre {
	int64 id = 1;
	string title = 2;
	string thumbnail = 3;
}

message GenreQuery {
	string title = 1;

	// Pagination
	int64 offset = 4;
	int64 limit = 5;
}

message GenreRequest {
	int64 id = 1;
}

message GenresRequest {
	GenreQuery query = 1;
}

message GenreResponse { 
	Genre genre = 1; 
}

message GenresResponse { 
	repeated Genre genres = 1;
	uint64 count = 2;
}

service GenreService {
	rpc Genre(GenreRequest) returns (GenreResponse);
	rpc Genres(GenresRequest) returns (GenresResponse);
}
